Small improvements and bug fixes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Software designer</title>
   </head>
   <body>
-    <div id="app" class="h-screen"></div>
+    <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
     <script>
       window.global = window;
